[tool.poetry]
name = "argos-extensions"
version = "0.1.0"
description = "Some Gnome-extensions that use the Argos extension API to generate Gnome top-bar indicators"
authors = ["Alejandro Fontal <alejandro.fontal.92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.2"
plotnine = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
